# gooroom-datetime-plugin

./: Makefile.in  README  configure  configure.ac  configure.ac.in
debian/: changelog  control  copyright  rules
icons/: Makefile.in
icons/scalable/: Makefile.in
icons/scalable/apps/: Makefile.am  Makefile.in
panel-plugin/: Makefile.am  Makefile.in  clock-digital.c  clock-digital.h  clock-time.c  clock-time.h  datetime-plugin.c  datetime-plugin.desktop.in.in  datetime-plugin.h  datetime-window-resources.c  datetime-window-resources.h  datetime-window.ui  gresource.xml
po/: POTFILES.in  POTFILES.skip  en_GB.po  en_US.po  ko.po
